--- a/kubernetes/apps/database/emqx/exporter/helmrelease.yaml
+++ b/kubernetes/apps/database/emqx/exporter/helmrelease.yaml
@@ -104,6 +104,6 @@ spec:
     persistence:
       config:
         type: secret
-        name: emqx-exporter
+        name: "{{ .Release.Name }}"
         globalMounts:
           - path: /etc/emqx-exporter
