--- a/kubernetes/apps/default/autobrr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/autobrr/app/helmrelease.yaml
@@ -80,7 +80,7 @@ spec:
     route:
       app:
         hostnames:
-          - autobrr.nasenov.dev
+          - "{{ .Release.Name }}.nasenov.dev"
         parentRefs:
           - name: internal
             namespace: kube-system
@@ -88,7 +88,7 @@ spec:
 
     persistence:
       config:
-        existingClaim: autobrr
+        existingClaim: "{{ .Release.Name }}"
       tmpfs:
         type: emptyDir
         advancedMounts:
