--- a/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
@@ -56,7 +56,7 @@ spec:
     route:
       app:
         hostnames:
-          - jellyseerr.nasenov.dev
+          - "{{ .Release.Name }}.nasenov.dev"
         parentRefs:
           - name: internal
             namespace: kube-system
@@ -64,7 +64,7 @@ spec:
 
     persistence:
       config:
-        existingClaim: jellyseerr
+        existingClaim: "{{ .Release.Name }}"
         globalMounts:
           - path: /app/config
       tmpfs:
