--- a/kubernetes/apps/networking/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/cloudflared/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
               TUNNEL_METRICS: 0.0.0.0:8080
             envFrom:
               - secretRef:
-                  name: cloudflared
+                  name: "{{ .Release.Name }}"
             probes:
               liveness: &probes
                 enabled: true
