--- a/kubernetes/apps/observability/gatus/app/kustomization.yaml
+++ b/kubernetes/apps/observability/gatus/app/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./helmrelease.yaml
   - ./prometheusrule.yaml
 configMapGenerator:
-  - name: gatus-configmap
+  - name: gatus
     files:
       - config.yaml=./resources/config.yaml
 generatorOptions:
