--- a/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
                 spec:
                   httpGet:
                     path: /health
-                    port: 8096
+                    port: &port 8096
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -64,8 +64,7 @@ spec:
       app:
         ports:
           http:
-            port: 80
-            targetPort: 8096
+            port: *port
 
     route:
       app:
