--- a/kubernetes/apps/default/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/bazarr/app/helmrelease.yaml
@@ -33,6 +33,7 @@ spec:
               tag: 1.5.2@sha256:dbc87e5ce9e199709188e152e82b3ff5d33e6521a1b3d61e465aa75b4b739e7f
             env:
               TZ: Europe/Sofia
+              BAZARR__PORT: &port 80
             probes:
               liveness: &probes
                 enabled: true
@@ -40,7 +41,7 @@ spec:
                 spec:
                   httpGet:
                     path: /health
-                    port: 6767
+                    port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -62,8 +63,7 @@ spec:
       app:
         ports:
           http:
-            port: 80
-            targetPort: 6767
+            port: *port
 
     route:
       app:
