--- a/kubernetes/apps/observability/kromgo/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kromgo/app/helmrelease.yaml
@@ -37,8 +37,8 @@ spec:
               tag: v0.7.1@sha256:d8fca4ff9b696abc4ca019c76fa629c39e844e4d9435f4afac87a97b1eeae152
             env:
               PROMETHEUS_URL: http://kube-prometheus-stack-prometheus.observability.svc.cluster.local:9090
-              SERVER_PORT: 80
-              HEALTH_PORT: 8080
+              SERVER_PORT: &port 80
+              HEALTH_PORT: &healthPort 8080
             probes:
               liveness: &probes
                 enabled: true
@@ -46,7 +46,7 @@ spec:
                 spec:
                   httpGet:
                     path: /readyz
-                    port: 8080
+                    port: *healthPort
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -68,10 +68,9 @@ spec:
       app:
         ports:
           http:
-            primary: true
-            port: 80
+            port: *port
           health:
-            port: 8080
+            port: *healthPort
 
     route:
       app:
@@ -84,7 +83,7 @@ spec:
         rules:
           - backendRefs:
               - identifier: app
-                port: 80
+                port: *port
 
     persistence:
       config-file:
