feat: add sync terraform tfvars task

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -6,6 +6,7 @@ includes:
   cluster: .taskfiles/cluster
   kubernetes: .taskfiles/kubernetes
   volsync: .taskfiles/volsync
+  workstation: .taskfiles/workstation
 
 tasks:
   default:
