chore: add terraform init step

--- a/.taskfiles/cluster/Taskfile.yaml
+++ b/.taskfiles/cluster/Taskfile.yaml
@@ -26,6 +26,8 @@ tasks:
   terraform-apply:
     internal: true
     dir: "{{.TERRAFORM_DIRECTORY}}"
-    cmd: terraform apply
+    cmds:
+      - terraform init
+      - terraform apply
     preconditions:
       - which terraform
