--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -42,7 +42,8 @@ spec:
       app:
         ports:
           http:
-            port: 8123
+            port: 80
+            targetPort: 8123
 
     route:
       app:
