--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -33,6 +33,7 @@ spec:
             matchMode: "partial",
             maxDataDepth: 3,
             outputDir: null,
+            port: Number(process.env.CROSS_SEED_PORT),
             radarr: [
               "http://radarr.default.svc.cluster.local/?apikey={{ .RADARR_KEY }}"
             ],
