chore: remove TALOS_VERSION env var

--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/talos.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/talos.yaml
@@ -5,7 +5,8 @@ kind: Plan
 metadata:
   name: talos
 spec:
-  version: ${TALOS_VERSION}
+  # renovate: datasource=docker depName=ghcr.io/siderolabs/installer
+  version: v1.11.0
   serviceAccountName: system-upgrade
   secrets:
     - name: system-upgrade
@@ -24,11 +25,7 @@ spec:
       effect: NoSchedule
   upgrade:
     image: ghcr.io/jfroy/tnu:0.4.3
-    envs:
-      - name: NODE_IP
-        valueFrom:
-          fieldRef:
-            fieldPath: status.hostIP
     args:
-      - --node=$(NODE_IP)
+      - --node=$(SYSTEM_UPGRADE_NODE_NAME)
       - --tag=$(SYSTEM_UPGRADE_PLAN_LATEST_VERSION)
+      - --powercycle
