--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/kubernetes.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/kubernetes.yaml
@@ -5,7 +5,8 @@ kind: Plan
 metadata:
   name: kubernetes
 spec:
-  version: ${KUBERNETES_VERSION}
+  # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
+  version: v1.34.0
   serviceAccountName: system-upgrade
   secrets:
     - name: system-upgrade
