chore: add qui externalsecret

--- a/kubernetes/apps/default/qui/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qui/app/helmrelease.yaml
@@ -38,9 +38,9 @@ spec:
               QUI__HOST: 0.0.0.0
               QUI__PORT: &port 80
               QUI__LOG_LEVEL: INFO
-            # envFrom:
-            #   - secretRef:
-            #       name: "{{ .Release.Name }}"
+            envFrom:
+              - secretRef:
+                  name: "{{ .Release.Name }}"
             probes:
               liveness: &probes
                 enabled: true
