--- a/kubernetes/apps/kube-system/certificates/ks.yaml
+++ b/kubernetes/apps/kube-system/certificates/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   name: certificates-import
 spec:
   targetNamespace: kube-system
-  interval: 1h
+  interval: 30m
   timeout: 5m
   retryInterval: 2m
   dependsOn:
@@ -19,3 +19,23 @@ spec:
     name: flux-system
     namespace: flux-system
   wait: true
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: certificates-export
+spec:
+  targetNamespace: kube-system
+  interval: 30m
+  timeout: 5m
+  retryInterval: 2m
+  dependsOn:
+    - name: certificates-import
+      namespace: kube-system
+  path: ./kubernetes/apps/kube-system/certificates/export
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
