--- a/kubernetes/apps/database/emqx/exporter/helmrelease.yaml
+++ b/kubernetes/apps/database/emqx/exporter/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: app-template
+    name: emqx-exporter
   install:
     remediation:
       retries: -1
