chore: cross seed enable search job

--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -37,6 +37,7 @@ spec:
             radarr: [
               "http://radarr.default.svc.cluster.local/?apikey={{ .RADARR_KEY }}"
             ],
+            searchCadence: "1 day",
             seasonFromEpisodes: 1,
             skipRecheck: true,
             sonarr: [
