fix: cross seed config

--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -22,6 +22,8 @@ spec:
               "/data/downloads/autobrr"
             ],
             delay: 30,
+            excludeOlder: "2 weeks",
+            excludeRecentSearch: "3 days",
             flatLinking: false,
             fuzzySizeThreshold: 0.1,
             includeSingleEpisodes: false,
