feat: deploy thelounge

--- a/kubernetes/apps/default/glance/app/resources/glance.yml
+++ b/kubernetes/apps/default/glance/app/resources/glance.yml
@@ -53,6 +53,9 @@ pages:
               - title: Qui
                 url: https://qui.nasenov.dev
                 icon: di:autobrr.svg
+              - title: Thelounge
+                url: https://thelounge.nasenov.dev
+                icon: di:thelounge.svg
 
           - type: monitor
             title: Infrastructure
