--- a/kubernetes/apps/kube-system/node-feature-discovery/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/node-feature-discovery/app/helmrelease.yaml
@@ -6,13 +6,9 @@ metadata:
   name: node-feature-discovery
 spec:
   interval: 30m
-  chart:
-    spec:
-      chart: node-feature-discovery
-      version: 0.18.0
-      sourceRef:
-        kind: HelmRepository
-        name: node-feature-discovery
+  chartRef:
+    kind: OCIRepository
+    name: node-feature-discovery
   values:
     worker:
       config:
