chore: remove kustomizeconfigs

--- a/kubernetes/apps/kube-system/cilium/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/kustomization.yaml
@@ -9,6 +9,4 @@ resources:
 configMapGenerator:
   - name: cilium-helm-values
     files:
-      - values.yaml=./helm-values.yaml
-configurations:
-  - kustomizeconfig.yaml
+      - values.yaml=./values.yaml
