--- a/kubernetes/apps/kube-system/coredns/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/coredns/app/kustomization.yaml
@@ -8,6 +8,4 @@ resources:
 configMapGenerator:
   - name: coredns-helm-values
     files:
-      - values.yaml=./helm-values.yaml
-configurations:
-  - kustomizeconfig.yaml
+      - values.yaml=./values.yaml
