chore: flux global SOPS decryption

--- a/kubernetes/apps/flux-system/flux-instance/app/externalsecret.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/externalsecret.yaml
@@ -16,3 +16,21 @@ spec:
     - secretKey: FLUX_GITHUB_WEBHOOK_TOKEN
       remoteRef:
         key: 028e064a-1d25-4b60-a5fc-b2f5009c280b
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: sops-age
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: bitwarden-secrets-manager
+  target:
+    template:
+      data:
+        age.agekey: "{{ .SOPS_PRIVATE_KEY }}"
+  data:
+    - secretKey: SOPS_PRIVATE_KEY
+      remoteRef:
+        key: aa436251-38bf-456c-92f8-b36c00aadff6
