--- a/kubernetes/cluster/ks.yaml
+++ b/kubernetes/cluster/ks.yaml
@@ -17,20 +17,13 @@ spec:
     namespace: flux-system
   decryption:
     provider: sops
-    secretRef:
-      name: sops-age
   patches:
     - # Add Sops decryption to child Kustomizations
       patch: |-
-        apiVersion: kustomize.toolkit.fluxcd.io/v1
-        kind: Kustomization
-        metadata:
-          name: not-used
-        spec:
-          decryption:
+        - op: add
+          path: /spec/decryption
+          value:
             provider: sops
-            secretRef:
-              name: sops-age
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
