fix: remove configmap name suffix

--- a/kubernetes/apps/kube-system/cilium/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/kustomization.yaml
@@ -10,3 +10,5 @@ configMapGenerator:
   - name: cilium-helm-values
     files:
       - values.yaml=./values.yaml
+generatorOptions:
+  disableNameSuffixHash: true
