--- a/kubernetes/apps/kube-system/coredns/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/coredns/app/kustomization.yaml
@@ -9,3 +9,5 @@ configMapGenerator:
   - name: coredns-helm-values
     files:
       - values.yaml=./values.yaml
+generatorOptions:
+  disableNameSuffixHash: true
