--- a/kubernetes/apps/flux-system/flux-instance/app/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/kustomization.yaml
@@ -13,3 +13,5 @@ configMapGenerator:
   - name: flux-instance-helm-values
     files:
       - values.yaml=./values.yaml
+generatorOptions:
+  disableNameSuffixHash: true
