chore: update cross-seed config

--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -51,7 +51,8 @@ spec:
             torznab: [
               "http://prowlarr.default.svc.cluster.local/4/api?apikey={{ .PROWLARR_KEY }}", // TL
               "http://prowlarr.default.svc.cluster.local/5/api?apikey={{ .PROWLARR_KEY }}", // HDT
-              "http://prowlarr.default.svc.cluster.local/7/api?apikey={{ .PROWLARR_KEY }}" // ANT
+              "http://prowlarr.default.svc.cluster.local/7/api?apikey={{ .PROWLARR_KEY }}", // ANT
+              "http://prowlarr.default.svc.cluster.local/8/api?apikey={{ .PROWLARR_KEY }}" // ATH
             ],
             useClientTorrents: true
           };
