--- a/kubernetes/apps/observability/gatus/app/resources/config.yaml
+++ b/kubernetes/apps/observability/gatus/app/resources/config.yaml
@@ -19,9 +19,9 @@ connectivity:
     interval: 1m
 
 endpoints:
-  - name: emqx
+  - name: mosquitto
     group: infrastructure
-    url: tcp://emqx-listeners.database.svc.cluster.local:1883
+    url: tcp://mosquitto.default.svc.cluster.local:1883
     interval: 1m
     ui:
       hide-url: true
