--- a/kubernetes/apps/default/fusion/app/helmrelease.yaml
+++ b/kubernetes/apps/default/fusion/app/helmrelease.yaml
@@ -69,7 +69,5 @@ spec:
             sectionName: https
 
     persistence:
-      config:
+      data:
         existingClaim: "{{ .Release.Name }}"
-        globalMounts:
-          - path: /data
