--- a/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
@@ -79,10 +79,5 @@ spec:
       qbrr:
         type: image
         image: ghcr.io/buroa/qbrr:0.1.1@sha256:fe4a1d100ba896999253a5122d9c77cc4920779d618c23f765458cb6ec7383ca
-      tmpfs:
+      tmp:
         type: emptyDir
-        advancedMounts:
-          qbittorrent:
-            app:
-              - path: /tmp
-                subPath: tmp
