--- a/kubernetes/apps/default/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sonarr/app/helmrelease.yaml
@@ -76,10 +76,5 @@ spec:
         path: /mnt/tank/media
         globalMounts:
           - path: /data
-      tmpfs:
+      tmp:
         type: emptyDir
-        advancedMounts:
-          sonarr:
-            app:
-              - path: /tmp
-                subPath: tmp
