chore: update kps config

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanagerconfig.yaml
@@ -9,6 +9,7 @@ spec:
     receiver: discord
     groupBy:
       - alertname
+      - cluster
       - job
     groupWait: 1m
     groupInterval: 5m
