chore: flux source controller cache configmaps and secrets

--- a/kubernetes/apps/flux-system/flux-instance/app/values.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/values.yaml
@@ -72,6 +72,14 @@ instance:
         target:
           kind: Deployment
           name: source-controller
+      - # Cache Secrets and ConfigMaps
+        patch: |-
+          - op: add
+            path: /spec/template/spec/containers/0/args/-
+            value: --feature-gates=CacheSecretsAndConfigMaps=true
+        target:
+          kind: Deployment
+          name: source-controller
       # Ref: https://fluxcd.io/flux/installation/configuration/helm-oom-detection
       - patch: |-
           # Enable OOM watch feature
